Adding scrolling sequence with changing emotions on Alice.

--- a/book/css/screen.css
+++ b/book/css/screen.css
@@ -526,116 +526,142 @@ html, body {
   height: 16%;
 }
 
-/* line 1, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 87, alice-fall/*.png */
+.alice-fall-sprite, .curious .alice-falling, .bored .alice-falling, .sleeping .alice-falling, .waking .alice-falling, .weird .alice-falling, .jolted .alice-falling {
+  background-image: url('../img/alice-fall-saebaba4ad9.png');
+  background-repeat: no-repeat;
+}
+
+/* line 4, ../scss/scenes/tunnels/_tunnels.scss */
 .page.page_tunnels {
-  background: url('../img/tunnels.svg?1377638711') no-repeat, url('../img/bg_tunnel-specks.png?1374696235'), #5a4f4a;
+  background: url('../img/tunnels.svg?1377638711') no-repeat, url('../img/bg_tunnel-specks.png?1374696235'), #6c373f;
   -webkit-background-size: 100% auto, auto auto;
   -moz-background-size: 100% auto, auto auto;
   -o-background-size: 100% auto, auto auto;
   background-size: 100% auto, auto auto;
 }
 
-/* line 11, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 14, ../scss/scenes/tunnels/_tunnels.scss */
 #tunnel {
-  background: #5A4F4A;
   position: relative;
+  background: url(http://stash.rachelnabors.com/codepen/alice/bg-tunnel-border-left.svg?1) 0 0 repeat-y, url(http://stash.rachelnabors.com/codepen/alice/bg-tunnel-border-right.svg?1) 100% 0 repeat-y, url(http://stash.rachelnabors.com/codepen/alice/bg-tunnel-furniture-comp900.svg) top center repeat-y, url(http://stash.rachelnabors.com/codepen/alice/bg-tunnel-specks.png), #6c373f;
+  background-size: 20px 150px,  20px 150px,  80% auto, auto auto;
 }
 
-/* line 16, ../scss/scenes/tunnels/_tunnels.scss */
-.tunnel_bg_wrapper {
-  height: 100%;
-  width: 100%;
-  overflow: hidden;
-  top: 0;
-  left: 0;
-}
-
-@-moz-keyframes fall {
-  /* line 23, ../scss/scenes/tunnels/_tunnels.scss */
-  0% {
-    -moz-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-
-  /* line 26, ../scss/scenes/tunnels/_tunnels.scss */
-  100% {
-    -moz-transform: translate(0, -900px);
-    transform: translate(0, -900px);
-  }
-}
-
-@-webkit-keyframes fall {
-  /* line 23, ../scss/scenes/tunnels/_tunnels.scss */
-  0% {
-    -webkit-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-
-  /* line 26, ../scss/scenes/tunnels/_tunnels.scss */
-  100% {
-    -webkit-transform: translate(0, -900px);
-    transform: translate(0, -900px);
-  }
-}
-
-@-o-keyframes fall {
-  /* line 23, ../scss/scenes/tunnels/_tunnels.scss */
-  0% {
-    -o-transform: translate(0, 0);
-    transform: translate(0, 0);
-  }
-
-  /* line 26, ../scss/scenes/tunnels/_tunnels.scss */
-  100% {
-    -o-transform: translate(0, -900px);
-    transform: translate(0, -900px);
-  }
-}
-
-@keyframes fall {
-  /* line 23, ../scss/scenes/tunnels/_tunnels.scss */
-  0% {
-    transform: translate(0, 0);
-  }
-
-  /* line 26, ../scss/scenes/tunnels/_tunnels.scss */
-  100% {
-    transform: translate(0, -900px);
-  }
-}
-
-/* line 31, ../scss/scenes/tunnels/_tunnels.scss */
-.tunnel_bg {
-  -webkit-animation: fall 6s linear infinite;
-  -moz-animation: fall 6s linear infinite;
-  -o-animation: fall 6s linear infinite;
-  animation: fall 6s linear infinite;
-  background: url(http://stash.rachelnabors.com/codepen/alice/bg-tunnel-border-left.svg?1) 0 0 repeat-y, url(http://stash.rachelnabors.com/codepen/alice/bg-tunnel-border-right.svg?1) 100% 0 repeat-y, url(http://stash.rachelnabors.com/codepen/alice/bg-tunnel-furniture-comp900.svg) top center repeat-y, url(http://stash.rachelnabors.com/codepen/alice/bg-tunnel-specks.png);
-  background-size: 20px 150px,  20px 150px,  100% 900px, auto auto;
-  position: absolute;
-  left: 50%;
-  top: 0;
-  margin-left: -400px;
-  height: 900px;
-  width: 800px;
-}
-
-/* line 50, ../scss/scenes/tunnels/_tunnels.scss */
-.tunnel_bg2 {
-  top: 900px;
-}
-
-/* line 54, ../scss/scenes/tunnels/_tunnels.scss */
-.tunnel_bg3 {
-  top: 1800px;
-}
-
-/* line 59, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 73, ../scss/scenes/tunnels/_tunnels.scss */
 .page_falling {
   z-index: -1;
 }
 
-/* line 120, ../scss/scenes/tunnels/_tunnels.scss */
+/* line 75, ../scss/scenes/tunnels/_tunnels.scss */
+.curious .alice-falling {
+  background-position: 0 20%;
+}
+
+/* line 79, ../scss/scenes/tunnels/_tunnels.scss */
+.bored .alice-falling {
+  background-position: 0 80%;
+}
+
+/* line 83, ../scss/scenes/tunnels/_tunnels.scss */
+.sleeping .alice-falling {
+  background-position: 0 60%;
+}
+
+/* line 87, ../scss/scenes/tunnels/_tunnels.scss */
+.waking .alice-falling {
+  background-position: 0 100%;
+}
+
+/* line 91, ../scss/scenes/tunnels/_tunnels.scss */
+.weird .alice-falling {
+  background-position: 0 0;
+}
+
+/* line 95, ../scss/scenes/tunnels/_tunnels.scss */
+.jolted .alice-falling {
+  background-position: 0 40%;
+}
+
+/* line 12, ../../../../../../../Library/Ruby/Gems/1.8/gems/animation-studio-0.1.2/stylesheets/animation-studio/_animation-sequence.scss */
+.frightened .alice-falling {
+  background: url('../img/alice-frightened-s41f9b8ddd1.png') 0 0 no-repeat;
+}
+
+@-moz-keyframes freak-out {
+  /* line 55, ../../../../../../../Library/Ruby/Gems/1.8/gems/animation-studio-0.1.2/stylesheets/animation-studio/_animation-sequence.scss */
+  0% {
+    background-position: 0 0;
+  }
+
+  /* line 58, ../../../../../../../Library/Ruby/Gems/1.8/gems/animation-studio-0.1.2/stylesheets/animation-studio/_animation-sequence.scss */
+  100% {
+    background-position: 0 200%;
+  }
+}
+
+@-webkit-keyframes freak-out {
+  /* line 55, ../../../../../../../Library/Ruby/Gems/1.8/gems/animation-studio-0.1.2/stylesheets/animation-studio/_animation-sequence.scss */
+  0% {
+    background-position: 0 0;
+  }
+
+  /* line 58, ../../../../../../../Library/Ruby/Gems/1.8/gems/animation-studio-0.1.2/stylesheets/animation-studio/_animation-sequence.scss */
+  100% {
+    background-position: 0 200%;
+  }
+}
+
+@-o-keyframes freak-out {
+  /* line 55, ../../../../../../../Library/Ruby/Gems/1.8/gems/animation-studio-0.1.2/stylesheets/animation-studio/_animation-sequence.scss */
+  0% {
+    background-position: 0 0;
+  }
+
+  /* line 58, ../../../../../../../Library/Ruby/Gems/1.8/gems/animation-studio-0.1.2/stylesheets/animation-studio/_animation-sequence.scss */
+  100% {
+    background-position: 0 200%;
+  }
+}
+
+@keyframes freak-out {
+  /* line 55, ../../../../../../../Library/Ruby/Gems/1.8/gems/animation-studio-0.1.2/stylesheets/animation-studio/_animation-sequence.scss */
+  0% {
+    background-position: 0 0;
+  }
+
+  /* line 58, ../../../../../../../Library/Ruby/Gems/1.8/gems/animation-studio-0.1.2/stylesheets/animation-studio/_animation-sequence.scss */
+  100% {
+    background-position: 0 200%;
+  }
+}
+
+/* line 104, ../scss/scenes/tunnels/_tunnels.scss */
+.frightened .alice-falling {
+  height: 998px;
+  width: 640px;
+  -webkit-animation: freak-out 1.5s steps(2) infinite;
+  -moz-animation: freak-out 1.5s steps(2) infinite;
+  -o-animation: freak-out 1.5s steps(2) infinite;
+  animation: freak-out 1.5s steps(2) infinite;
+}
+
+/* line 108, ../scss/scenes/tunnels/_tunnels.scss */
+#tunnel .alice-falling {
+  -webkit-background-size: 100% auto;
+  -moz-background-size: 100% auto;
+  -o-background-size: 100% auto;
+  background-size: 100% auto;
+  width: 31.25%;
+  padding-top: 48.73047%;
+  height: 0;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  margin-left: -15.625%;
+}
+
+/* line 126, ../scss/scenes/tunnels/_tunnels.scss */
 #tunnel.in-view .alice-falling, #tunnel.in-view .cheshire-cat, #tunnel.in-view .tunnel_bg_wrapper {
   position: fixed;
 }
