--- a/book/scss/scenes/wonderland/_wonderland.scss
+++ b/book/scss/scenes/wonderland/_wonderland.scss
@@ -1,6 +1,6 @@
 
 .page_crash-landing {
-	@include background(image-url("../../storyboard/storyboard18.jpg") no-repeat);
+	@include background(image-url("bg_wonderland1.jpg") no-repeat);
 }
 
 .page_credits {
