--- a/book/scss/screen.scss
+++ b/book/scss/screen.scss
@@ -10,6 +10,7 @@
 
 // General styles for background + shared styles for universal elements. 
 @import "foundation";
+@import "typography";
 
 // Loading page
 @import "loader";
