--- a/book/css/screen.css
+++ b/book/css/screen.css
@@ -64,7 +64,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 
 /* line 2, ../scss/_extends.scss */
-p {
+.page > p {
   position: absolute;
   overflow: hidden;
   clip: rect(0 0 0 0);
@@ -84,7 +84,7 @@ p {
 }
 
 /* line 18, ../scss/_extends.scss */
-.scene .page, .page_rabbit-appears .rabbit, #to-tunnels {
+.scene .page, .cue, .page_rabbit-appears .rabbit, #to-tunnels {
   text-indent: 100%;
   white-space: nowrap;
   overflow: hidden;
@@ -94,6 +94,86 @@ p {
 html, body {
   background: #000;
   height: 100%;
+}
+
+/* line 105, ../../../../../../../Library/Ruby/Gems/1.8/gems/compass-0.13.alpha.4/frameworks/compass/stylesheets/compass/typography/_vertical_rhythm.scss */
+html {
+  font-size: 112.5%;
+  line-height: 1.33333em;
+}
+
+/* line 19, ../scss/_typography.scss */
+body {
+  color: #431236;
+  font-family: "nueva-std-extended";
+  font-weight: "300";
+}
+
+/* line 25, ../scss/_typography.scss */
+.continued {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  background: #f090b1;
+  position: absolute;
+  text-indent: 0;
+  top: 10%;
+  left: 50%;
+  margin-left: -40%;
+  padding: 2.66667em;
+  white-space: normal;
+  width: 80%;
+}
+/* line 35, ../scss/_typography.scss */
+.continued h2 {
+  font-family: "hellenic-wide";
+  margin-bottom: 1em;
+  font-size: 2.33333em;
+  line-height: 1.14286em;
+}
+/* line 40, ../scss/_typography.scss */
+.continued ul li {
+  padding-left: 1.33333em;
+  margin-bottom: 1.33333em;
+}
+/* line 44, ../scss/_typography.scss */
+.continued blockquote {
+  font-family: "blue-goblet-alt";
+  font-size: 1.5em;
+  line-height: 1.77778em;
+  margin-bottom: 0.88889em;
+}
+/* line 49, ../scss/_typography.scss */
+.continued a:link, .continued a:visited, .continued a:hover, .continued a:active {
+  color: #64044b;
+  padding: .1em .1em .05em;
+  text-decoration: none;
+  border-bottom: dotted 1px #64044b;
+}
+/* line 55, ../scss/_typography.scss */
+.continued a:hover, .continued a:active {
+  color: #ffeef4;
+  background: #ea6391;
+  border: 0;
+}
+/* line 60, ../scss/_typography.scss */
+.continued .author {
+  background: #431236;
+  color: #f090b1;
+  font-family: "blue-goblet-alt";
+  letter-spacing: .05em;
+  font-size: 1.5em;
+  line-height: 1.77778em;
+  width: 40%;
+  padding: 1.33333em;
+  -webkit-transform: rotate(12deg);
+  -moz-transform: rotate(12deg);
+  -ms-transform: rotate(12deg);
+  -o-transform: rotate(12deg);
+  transform: rotate(12deg);
+  position: absolute;
+  bottom: -8em;
+  right: 2.66667em;
 }
 
 /* line 13, ../scss/scenes/_common.scss */
@@ -769,12 +849,40 @@ html, body {
   }
 }
 
-/* line 2, ../scss/scenes/wonderland/_wonderland.scss */
+/* line 55, credits/*.png */
+.credits-sprite, .scene-wonderland .page_credits .alice, .scene-wonderland .page_credits .rabbit {
+  background-image: url('../img/credits-s628fd48b8d.png');
+  background-repeat: no-repeat;
+}
+
+/* line 4, ../scss/scenes/wonderland/_wonderland.scss */
 .page_crash-landing {
   background: url('../img/bg_wonderland1.jpg?1378781619') no-repeat;
 }
 
-/* line 6, ../scss/scenes/wonderland/_wonderland.scss */
-.page_credits {
-  background: url('../img/../../storyboard/storyboard19.jpg?1375563030') no-repeat;
+/* line 8, ../scss/scenes/wonderland/_wonderland.scss */
+.scene-wonderland .page_credits {
+  background: #a22882 url('../img/pat_argyle.svg?1378830277');
+  -webkit-background-size: 25%, auto;
+  -moz-background-size: 25%, auto;
+  -o-background-size: 25%, auto;
+  background-size: 25%, auto;
+}
+/* line 11, ../scss/scenes/wonderland/_wonderland.scss */
+.scene-wonderland .page_credits .alice {
+  background-position: 0 0;
+  position: absolute;
+  left: -20%;
+  top: 20%;
+  width: 37.54883%;
+  padding-top: 48.63281%;
+}
+/* line 17, ../scss/scenes/wonderland/_wonderland.scss */
+.scene-wonderland .page_credits .rabbit {
+  background-position: 0 100%;
+  position: absolute;
+  right: -20%;
+  top: 20%;
+  width: 39.84375%;
+  padding-top: 43.94531%;
 }
